--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- left section  -->
         <div class="flex flex-col justify-center items-center w-full lg:w-1/2 ml-10">
             <div>
-                <div class="text-xl font-bold text-center lg:text-left">
+                <div class="text-xl font-bold text-left lg:text-left">
                     <span class="text-green-600">&#9650;</span>
                     <span>FarmMan</span>
                 </div>
